# tiki

./: .gitignore  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/app/: CMakeLists.txt
engine/app/src/: main.c
engine/core/: CMakeLists.txt
engine/core/include/core/: tiki.h
engine/core/src/: attack_mask.c  attack_mask.h  bitboard_constants.c  bitboard_constants.h  bitboard_ops.c  bitboard_ops.h  board.c  board.h  evaluation.h  limits.c  limits.h  mask_generator.c  mask_generator.h  move_encoding.c  move_encoding.h  move_generator.c  move_generator.h  parallel.c  parallel.h  random.c  random.h  search.h  search_constants.c  search_constants.h  search_state.c  search_state.h  sort.h  transposition.c  transposition.h  types.h  uci.c  uci.h  version.h  zobrist_key.c  zobrist_key.h
engine/core/src/evaluation/: README.md  evaluation.h  evaluation_mask.c  evaluation_mask.h  evaluation_weights.h
engine/core/src/evaluation_basic/: evaluation_mask.c  evaluation_mask.h
engine/core/src/hce/: README.md  evaluation.h  evaluation_mask.c  evaluation_mask.h  evaluation_weights.h
engine/core/src/nnue/: evaluation.h  misc.c  nnue.c  nnue.h
engine/magic_generator/: CMakeLists.txt
engine/magic_generator/src/: magic_numbers.c  magic_numbers.h  main.c  square_masks.c  square_masks.h
engine/test/: CMakeLists.txt
engine/test/data/: perft-tests.csv
engine/test/src/: bitboard_get_set_tests.c  make_move_tests.c  make_move_tests.h  make_undo_move_tests.c  make_undo_move_tests.h  perf_tests.h  perft_tests.c  tiki_test_runner.c
scripts/: README.md  run_engine.bat
